--- a/app/src/main/res/layout/activity_container.xml
+++ b/app/src/main/res/layout/activity_container.xml
@@ -100,6 +100,19 @@
             app:layout_constraintStart_toStartOf="@+id/end_time_tv"
             app:layout_constraintTop_toBottomOf="@+id/end_time_tv"/>
 
+        <Button
+            android:id="@+id/get_route_btn"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="8dp"
+            android:layout_marginStart="8dp"
+            android:text="get route"
+            android:visibility="invisible"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toStartOf="@+id/end_time_tv"
+            app:layout_constraintStart_toEndOf="@+id/private_completion"/>
+
     </android.support.constraint.ConstraintLayout>
 
     <android.support.v4.view.ViewPager
