--- a/app/src/main/res/layout/fragment_container_list.xml
+++ b/app/src/main/res/layout/fragment_container_list.xml
@@ -8,20 +8,8 @@
     android:layout_height="match_parent"
     tools:context=".features.container.ContainerActivity">
 
-    <android.support.design.widget.FloatingActionButton
-        android:id="@+id/addAddressBtn"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="16dp"
-        android:layout_marginRight="16dp"
-        android:layout_marginBottom="16dp"
-        android:clickable="true"
-        app:srcCompat="@drawable/buttons_style"
-        app:layout_constraintEnd_toEndOf="@+id/routeRecView"
-        app:layout_constraintBottom_toBottomOf="@+id/routeRecView"/>
-
     <Button
-        android:id="@+id/button5"
+        android:id="@+id/route_list_btn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
@@ -30,16 +18,16 @@
         android:text="route list"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/route_input_btn"
-        app:layout_constraintStart_toEndOf="@+id/button6" />
+        app:layout_constraintStart_toEndOf="@+id/address_list_btn"/>
 
     <Button
-        android:id="@+id/button6"
+        android:id="@+id/address_list_btn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="16dp"
         android:layout_marginStart="16dp"
         android:layout_marginBottom="8dp"
-        android:text="User list"
+        android:text="Address list"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"/>
 
@@ -52,10 +40,10 @@
         android:layout_marginRight="16dp"
         android:text="Route input"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+        app:layout_constraintEnd_toEndOf="parent"/>
 
     <android.support.v7.widget.RecyclerView
-        android:id="@+id/routeRecView"
+        android:id="@+id/recycler_view"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginBottom="8dp"
@@ -63,6 +51,23 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toTopOf="@+id/button5"/>
+        app:layout_constraintBottom_toTopOf="@+id/route_list_btn"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintVertical_bias="0.0"
+        app:layoutManager="android.support.v7.widget.LinearLayoutManager">
+
+    </android.support.v7.widget.RecyclerView>
+
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/address_input_btn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="16dp"
+        android:layout_marginRight="16dp"
+        android:layout_marginBottom="16dp"
+        android:clickable="true"
+        app:srcCompat="@drawable/buttons_style"
+        app:layout_constraintEnd_toEndOf="@+id/recycler_view"
+        app:layout_constraintBottom_toBottomOf="@+id/recycler_view"/>
 
 </android.support.constraint.ConstraintLayout>
