--- a/app/src/main/res/layout/list_single_address.xml
+++ b/app/src/main/res/layout/list_single_address.xml
@@ -1,13 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/root_layout"
+    android:id="@+id/address_wrapper"
     android:layout_width="match_parent"
     android:layout_height="60dp"
     android:background="@drawable/list_row_background">
 
     <TextView
-        android:id="@+id/address"
+        android:id="@+id/address_text_view"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginLeft="16dp"
@@ -20,6 +21,6 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.548" />
+        app:layout_constraintVertical_bias="0.548"/>
 
 </android.support.constraint.ConstraintLayout>
