--- a/app/src/main/res/layout/activity_container.xml
+++ b/app/src/main/res/layout/activity_container.xml
@@ -8,20 +8,6 @@
     android:background="@color/overcast"
     tools:context="com.example.jason.route_application.features.container.ContainerActivity">
 
-    <android.support.design.widget.AppBarLayout
-        android:id="@+id/appbar"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@color/colorPrimary"
-        android:theme="@style/AppTheme.AppBarOverlay">
-
-        <android.support.design.widget.TabLayout
-            android:id="@+id/tabs"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"/>
-
-    </android.support.design.widget.AppBarLayout>
-
     <android.support.constraint.ConstraintLayout
 
         android:id="@+id/constraintLayout"
@@ -31,18 +17,18 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/appbar">
+        app:layout_constraintTop_toTopOf="parent">
 
         <ImageView
             android:id="@+id/private_icon"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
             android:layout_marginLeft="16dp"
             android:layout_marginStart="16dp"
-            app:srcCompat="@drawable/ic_marker_private"
+            android:layout_marginTop="16dp"
+            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintStart_toStartOf="parent"/>
+            app:srcCompat="@drawable/ic_marker_private" />
 
         <TextView
             android:id="@+id/private_completion"
@@ -53,20 +39,20 @@
             android:layout_marginTop="4dp"
             android:textColor="@color/colorPrimaryDark"
             app:layout_constraintStart_toEndOf="@+id/private_icon"
-            app:layout_constraintTop_toTopOf="@+id/private_icon"/>
+            app:layout_constraintTop_toTopOf="@+id/private_icon" />
 
         <ImageView
             android:id="@+id/business_icon"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginBottom="16dp"
             android:layout_marginLeft="16dp"
             android:layout_marginStart="16dp"
             android:layout_marginTop="16dp"
-            android:layout_marginBottom="16dp"
-            app:srcCompat="@drawable/ic_marker_business"
-            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/private_icon"/>
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/private_icon"
+            app:srcCompat="@drawable/ic_marker_business" />
 
         <TextView
             android:id="@+id/business_completion"
@@ -77,7 +63,7 @@
             android:layout_marginTop="4dp"
             android:textColor="@color/colorPrimaryDark"
             app:layout_constraintStart_toEndOf="@+id/business_icon"
-            app:layout_constraintTop_toTopOf="@+id/business_icon"/>
+            app:layout_constraintTop_toTopOf="@+id/business_icon" />
 
         <TextView
             android:id="@+id/end_time_tv"
@@ -89,7 +75,7 @@
             android:text="Route end time"
             android:textColor="@color/colorPrimaryDark"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent"/>
+            app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
             android:id="@+id/route_end_time"
@@ -98,20 +84,7 @@
             android:layout_marginTop="8dp"
             android:textColor="@color/colorPrimaryDark"
             app:layout_constraintStart_toStartOf="@+id/end_time_tv"
-            app:layout_constraintTop_toBottomOf="@+id/end_time_tv"/>
-
-        <Button
-            android:id="@+id/get_route_btn"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="8dp"
-            android:layout_marginStart="8dp"
-            android:text="get route"
-            android:visibility="invisible"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toStartOf="@+id/end_time_tv"
-            app:layout_constraintStart_toEndOf="@+id/private_completion"/>
+            app:layout_constraintTop_toBottomOf="@+id/end_time_tv" />
 
     </android.support.constraint.ConstraintLayout>
 
