--- a/app/src/main/res/layout/fragment_address_list.xml
+++ b/app/src/main/res/layout/fragment_address_list.xml
@@ -17,7 +17,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <android.support.design.widget.FloatingActionButton
-        android:id="@+id/add_address_btn"
+        android:id="@+id/address_input_btn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="32dp"
