--- a/app/src/main/res/layout/activity_container.xml
+++ b/app/src/main/res/layout/activity_container.xml
@@ -7,6 +7,8 @@
     android:background="@color/overcast"
     tools:context="com.example.jason.route_application.features.container.ContainerActivity">
 
+    <include layout="@layout/loading_screen"/>
+
     <android.support.constraint.ConstraintLayout
 
         android:id="@+id/constraintLayout"
@@ -85,10 +87,21 @@
             app:layout_constraintStart_toStartOf="@+id/end_time_tv"
             app:layout_constraintTop_toBottomOf="@+id/end_time_tv" />
 
+        <Button
+            android:id="@+id/get_container_btn"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="80dp"
+            android:layout_marginStart="80dp"
+            android:layout_marginTop="24dp"
+            android:text="Button"
+            app:layout_constraintStart_toEndOf="@+id/private_completion"
+            app:layout_constraintTop_toTopOf="parent"/>
+
     </android.support.constraint.ConstraintLayout>
 
     <android.support.v4.view.ViewPager
-        android:id="@+id/container"
+        android:id="@+id/fragment_container"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         app:layout_behavior="@string/appbar_scrolling_view_behavior"
