--- a/app/src/main/res/layout-v4/activity_address_details.xml
+++ b/app/src/main/res/layout-v4/activity_address_details.xml
@@ -11,7 +11,7 @@
         android:id="@+id/subLayout"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:background="@drawable/layout_background"
+        android:background="@drawable/info_bar"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
