--- a/app/src/main/res/layout/dialog_address_input.xml
+++ b/app/src/main/res/layout/dialog_address_input.xml
@@ -97,13 +97,13 @@
         android:text="@string/cancel.reform_address_dialog"
         android:textColor="@android:color/white"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/add_address_btn"
+        app:layout_constraintEnd_toStartOf="@+id/address_input_btn"
         app:layout_constraintHorizontal_chainStyle="spread"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/city_input" />
 
     <Button
-        android:id="@+id/add_address_btn"
+        android:id="@+id/address_input_btn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="16dp"
