--- a/app/src/main/res/layout-v4/activity_address_details.xml
+++ b/app/src/main/res/layout-v4/activity_address_details.xml
@@ -85,6 +85,18 @@
             app:layout_constraintTop_toTopOf="parent"
             app:srcCompat="@drawable/ic_marker_private" />
 
+        <ProgressBar
+            android:id="@+id/typeChangeProgress_pb"
+            style="?android:attr/progressBarStyle"
+            android:layout_width="24dp"
+            android:layout_height="24dp"
+            android:layout_marginLeft="8dp"
+            android:layout_marginStart="8dp"
+            android:visibility="invisible"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"/>
+
     </android.support.constraint.ConstraintLayout>
 
     <android.support.v7.widget.RecyclerView
