--- a/app/src/main/res/layout/activity_comment_display.xml
+++ b/app/src/main/res/layout/activity_comment_display.xml
@@ -7,7 +7,7 @@
     tools:context="com.example.jason.route_application.features.commentDisplay.CommentDisplayActivity">
 
     <TextView
-        android:id="@+id/employeeNameTextView"
+        android:id="@+id/username_tv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
@@ -19,7 +19,7 @@
         android:layout_marginLeft="16dp" />
 
     <TextView
-        android:id="@+id/dateTextView"
+        android:id="@+id/date_tv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
@@ -27,11 +27,11 @@
         android:textColor="@color/colorPrimaryDark"
         android:text="@string/date.activity_comment_display"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/employeeNameTextView"
+        app:layout_constraintTop_toBottomOf="@+id/username_tv"
         android:layout_marginLeft="16dp" />
 
     <TextView
-        android:id="@+id/commentTextView"
+        android:id="@+id/comment_tv"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginBottom="8dp"
@@ -43,7 +43,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/dateTextView" />
+        app:layout_constraintTop_toBottomOf="@+id/date_tv" />
 
 
 </android.support.constraint.ConstraintLayout>
