--- a/app/src/main/res/layout/activity_comment_input.xml
+++ b/app/src/main/res/layout/activity_comment_input.xml
@@ -7,7 +7,7 @@
     tools:context="com.example.jason.route_application.features.commentInput.CommentInputActivity">
 
     <TextView
-        android:id="@+id/employeeNameTextView"
+        android:id="@+id/username_tv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="16dp"
@@ -19,7 +19,7 @@
         android:textColor="@color/colorPrimaryDark"/>
 
     <TextView
-        android:id="@+id/dateTextView"
+        android:id="@+id/date_tv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="16dp"
@@ -28,7 +28,7 @@
         android:textColor="@color/colorPrimaryDark"
         android:text="@string/date.activity_comment_input"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/employeeNameTextView" />
+        app:layout_constraintTop_toBottomOf="@+id/username_tv" />
 
     <EditText
         android:id="@+id/commentEditText"
@@ -46,7 +46,7 @@
         android:textColorHint="@color/colorPrimary"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/dateTextView" />
+        app:layout_constraintTop_toBottomOf="@+id/date_tv" />
 
     <ProgressBar
         android:id="@+id/progressBar"
