--- a/app/src/main/res/layout/list_item_comment.xml
+++ b/app/src/main/res/layout/list_item_comment.xml
@@ -7,7 +7,7 @@
     android:background="@drawable/list_item">
 
     <TextView
-        android:id="@+id/employeeNameTextView"
+        android:id="@+id/username_tv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
@@ -19,7 +19,7 @@
         android:layout_marginLeft="16dp" />
 
     <TextView
-        android:id="@+id/dateTextView"
+        android:id="@+id/date_tv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="16dp"
@@ -31,7 +31,7 @@
         android:layout_marginRight="16dp" />
 
     <TextView
-        android:id="@+id/commentTextView"
+        android:id="@+id/comment_tv"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginBottom="16dp"
@@ -45,6 +45,6 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/employeeNameTextView" />
+        app:layout_constraintTop_toBottomOf="@+id/username_tv" />
 
 </android.support.constraint.ConstraintLayout>
